--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -19,7 +19,7 @@
                    Elevation="0"
                    Rounded="@("lg")"
                    Ripple="false"
-                   OnClick="@(()=>To("/user"))">
+                   OnClick="@(()=>To("user"))">
                 <MList>
                     <MListItem ThreeLine>
                         <MListItemAvatar Class="ml-md-4"
