🐛 fix: Error display in English

--- a/SwashbucklerDiary/Pages/Mine/SettingPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/SettingPage.razor
@@ -41,7 +41,7 @@
                 <MListItemContent>
                     @(I18n.T("Setting.General.Storage"))
                 </MListItemContent>
-                <MListItemContent>
+                <MListItemContent Style="flex:none;">
                     <MListItemSubtitle Class="text-right">
                         @CacheSize
                     </MListItemSubtitle>
@@ -208,7 +208,7 @@
                     <MListItemContent>
                         @(I18n.T("Setting.Safe.PrivacyPassword"))
                     </MListItemContent>
-                    <MListItemContent>
+                    <MListItemContent Style="flex:none;">
                         <MListItemSubtitle Class="text-right">
                             @GetPrivatePasswordSetState()
                         </MListItemSubtitle>
