--- a/SwashbucklerDiary/Pages/Mine/About/LogPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/About/LogPage.razor
@@ -13,7 +13,7 @@
 
     <MySearch @bind-Value="ShowSearch"
     @bind-Search="Search"
-              Title="@(I18n.T("About.LogFile"))"
+              Title="@(I18n.T("About.LogFile.Name"))"
               OnChanged="UpdateLogsAsync">
     </MySearch>
 
