--- a/SwashbucklerDiary/Pages/Mine/About/PrivacyPolicyPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/About/PrivacyPolicyPage.razor
@@ -2,7 +2,7 @@
 @namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("About.Privacy"))"
+<MyAppBar Title="@(I18n.T("About.Privacy.Name"))"
           OnClick="NavigateToBack">
 </MyAppBar>
 
