--- a/SwashbucklerDiary/Pages/Mine/AboutPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/AboutPage.razor
@@ -76,7 +76,7 @@
           MaxWidth="420">
     <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
-            @(I18n.T("About.Check for updates"))
+            @(I18n.T("About.Check for updates.Name"))
             <MSpacer></MSpacer>
             <MButton Icon="true"
                      OnClick="()=>ShowVersionUpdate=false">
