--- a/SwashbucklerDiary/Pages/Mine/Export/LANTransfer/LANReceiver.razor
+++ b/SwashbucklerDiary/Pages/Mine/Export/LANTransfer/LANReceiver.razor
@@ -2,7 +2,7 @@
 @namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("Export.Receive"))"
+<MyAppBar Title="@(I18n.T("Export.Receive.Name"))"
           OnClick="NavigateToBack">
 </MyAppBar>
 
