--- a/SwashbucklerDiary/Pages/Mine/ExportPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/ExportPage.razor
@@ -15,11 +15,11 @@
            HideSlider="true">
         <MTab Class="my-tab"
               Ripple="false">
-            @(I18n.T("Export.Local"))
+            @(I18n.T("Export.Local.Name"))
         </MTab>
         <MTab Class="my-tab"
               Ripple="false">
-            @(I18n.T("Export.LAN"))
+            @(I18n.T("Export.LAN.Name"))
         </MTab>
     </MTabs>
     <MSpacer></MSpacer>
