--- a/SwashbucklerDiary/Pages/Mine/Settings/LocationPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/LocationPage.razor
@@ -2,7 +2,7 @@
 @namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("Setting.Diary.Location"))"
+<MyAppBar Title="@(I18n.T("Setting.Diary.Location.Name"))"
           OnClick="NavigateToBack">
 </MyAppBar>
 
