--- a/SwashbucklerDiary/Pages/Mine/Settings/PermissionPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/PermissionPage.razor
@@ -2,7 +2,7 @@
 @namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("Setting.General.Permission"))"
+<MyAppBar Title="@(I18n.T("Setting.General.Permission.Name"))"
           OnClick="NavigateToBack">
 </MyAppBar>
 
