--- a/SwashbucklerDiary/Pages/Mine/Settings/PrivacyLibraryPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/PrivacyLibraryPage.razor
@@ -12,7 +12,7 @@
 
     <MySearch @bind-Value="ShowSearch"
     @bind-Search="Search"
-              Title="@(I18n.T("Setting.Safe.PrivacyLibrary"))"
+              Title="@(I18n.T("Setting.Safe.PrivacyLibrary.Name"))"
               OnChanged="UpdateDiariesAsync">
     </MySearch>
 
