--- a/SwashbucklerDiary/Pages/Mine/UserPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/UserPage.razor
@@ -18,7 +18,7 @@
                 </MListItemIcon>
 
                 <MListItemContent>
-                    @(I18n.T("User.Avatar"))
+                    @(I18n.T("User.Avatar.Name"))
                 </MListItemContent>
 
                 <MListItemAction>
@@ -48,7 +48,7 @@
                 </MListItemIcon>
 
                 <MListItemContent>
-                    @(I18n.T("User.UserName"))
+                    @(I18n.T("User.UserName.Name"))
                 </MListItemContent>
 
                 <MListItemContent>
@@ -73,7 +73,7 @@
 
                 <MListItemContent>
                     <MListItemTitle>
-                        @(I18n.T("User.Sign"))
+                        @(I18n.T("User.Sign.Name"))
                     </MListItemTitle>
 
                 </MListItemContent>
