--- a/SwashbucklerDiary/Pages/Mine/About/RelatedOSPPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/About/RelatedOSPPage.razor
@@ -2,7 +2,7 @@
 @namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("About.Related"))"
+<MyAppBar Title="@(I18n.T("About.Related.Name"))"
           OnClick="NavigateToBack">
 </MyAppBar>
 
