--- a/SwashbucklerDiary/Pages/Mine/About/UserAgreementPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/About/UserAgreementPage.razor
@@ -2,7 +2,7 @@
 @namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("About.Agreement"))"
+<MyAppBar Title="@(I18n.T("About.Agreement.Name"))"
           OnClick="NavigateToBack">
 </MyAppBar>
 
