--- a/SwashbucklerDiary/Pages/Mine/AchievementPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/AchievementPage.razor
@@ -13,7 +13,7 @@
 
     <MySearch @bind-Value="ShowSearch"
     @bind-Search="Search"
-              Title="@(I18n.T("Mine.Achievement"))"
+              Title="@(I18n.T("Mine.Achievement.Name"))"
               OnChanged="UpdateAchievements">
     </MySearch>
 
