--- a/SwashbucklerDiary/Pages/Mine/BackupsPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/BackupsPage.razor
@@ -10,22 +10,22 @@
             mdi-arrow-left
         </MIcon>
     </MButton>
-    <MTabs @bind-Value="tabs"
+    <MTabs @bind-Value="tab"
            ActiveClass="text-h6 font-weight-bold"
            HideSlider="true">
         <MTab Class="my-tab"
               Ripple="false">
-            @(I18n.T("Backups.Local"))
+            @(I18n.T("Backups.Local.Name"))
         </MTab>
         <MTab Class="my-tab"
               Ripple="false">
-            @(I18n.T("Backups.WebDAV"))
+            @(I18n.T("Backups.WebDAV.Name"))
         </MTab>
     </MTabs>
     <MSpacer></MSpacer>
 </MAppBar>
 
-<SwiperTabItems @bind-Value="tabs">
+<SwiperTabItems @bind-Value="tab">
     <SwiperTabItem>
         <LocalBackups></LocalBackups>
     </SwiperTabItem>
