--- a/SwashbucklerDiary/Pages/Mine/Export/LANTransfer/LANSender.razor
+++ b/SwashbucklerDiary/Pages/Mine/Export/LANTransfer/LANSender.razor
@@ -2,7 +2,7 @@
 @namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("Export.Send"))"
+<MyAppBar Title="@(I18n.T("Export.Send.Name"))"
           OnClick="NavigateToBack">
 </MyAppBar>
 
