--- a/SwashbucklerDiary/Components/MyComponents/MySearch.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MySearch.razor
@@ -20,6 +20,6 @@ else
                 Clearable="true"
                 HideDetails="@("auto")"
                 spellcheck="false"
-                Placeholder="@(Placeholder ?? I18n.T("Search.Placeholder"))">
+                Placeholder="@(Placeholder ?? I18n.T("Search.Please enter keywords"))">
     </MTextField>
 }
