--- a/SwashbucklerDiary/Pages/SearchPage.razor
+++ b/SwashbucklerDiary/Pages/SearchPage.razor
@@ -24,7 +24,7 @@
 <ScrollContainer>
     <DiaryCardList @bind-Tags="Tags"
                    Value="Diaries"
-                   NotFoundText="@(IsSearchFiltered ? I18n.T("Search.Not Found"):null)">
+                   NotFoundText="@(I18n.T("Search.Not Found"))">
     </DiaryCardList>
 </ScrollContainer>
 
