🔥 chore: arrange code

--- a/SwashbucklerDiary/Pages/Mine/Export/LANTransfer/LANSender.razor
+++ b/SwashbucklerDiary/Pages/Mine/Export/LANTransfer/LANSender.razor
@@ -16,7 +16,7 @@
                 </span>
                 <MSpacer></MSpacer>
                 <MButton Icon="true"
-                         OnClick="StartListening">
+                         OnClick="StartUDPListening">
                     <MIcon>
                         mdi-refresh
                     </MIcon>
