🐛 fix: Text wrong

--- a/SwashbucklerDiary/Pages/Mine/AboutPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/AboutPage.razor
@@ -67,7 +67,7 @@
 </ScrollContainer>
 
 <MultiDialog @bind-Value="ShowSourceCode"
-             Title="@(I18n.T("About.SourceCode"))"
+             Title="@(I18n.T("About.SourceCode.Name"))"
              ListItemModels="CodeSources">
 
 </MultiDialog>
