--- a/SwashbucklerDiary/Components/DialogComponents/SponsorDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/SponsorDialog.razor
@@ -6,7 +6,7 @@
           MaxWidth="420">
     <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
-            @(I18n.T("About.Sponsor"))
+            @(I18n.T("About.Sponsor.Name"))
             <MSpacer></MSpacer>
             <MButton Icon="true"
                      OnClick="HandleOnCancel">
