--- a/SwashbucklerDiary/Pages/HistoryPage.razor.css
+++ b/SwashbucklerDiary/Pages/HistoryPage.razor.css
@@ -1,14 +1,3 @@
-﻿
-.normal-calendar {
-    position: relative;
-    z-index: 2;
-}
-
-.float-calendar {
-    position: absolute;
-    width: 100%;
-    top: 0px;
-    z-index: 1;
-    left:0px;
-    padding:12px 16px;
+﻿.float-calendar ::deep input {
+    cursor: pointer;
 }
