🐛 fix(MyDatePicker): Color wrong on dark mode

--- a/SwashbucklerDiary/Components/MyComponents/MyDatePicker.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyDatePicker.razor
@@ -5,10 +5,11 @@
           MyValueChanged="ValueChanged"
           MaxWidth="420">
     <MDatePicker @bind-Value="InternalDate"
-                 Class="rounded-lg pt-4"
+                 Class="rounded-lg pt-4 my-picker"
                  FullWidth="true"
                  NoTitle="true"
                  Scrollable="true"
+                 Color="primary"
                  Events="Events"
                  EventColor='EventColor'
                  Min="Min"
