💄 style: update style

--- a/SwashbucklerDiary/Pages/Mine/Settings/PermissionPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/PermissionPage.razor
@@ -21,8 +21,8 @@
                     @(I18n.T("Permission.Camera"))
                 </MListItemContent>
 
-                <MListItemContent>
-                    <MListItemSubtitle Class="text-right">
+                <MListItemContent Class="setting-state">
+                    <MListItemSubtitle>
                         @CameraPermission
                     </MListItemSubtitle>
                 </MListItemContent>
@@ -45,8 +45,8 @@
                     @(I18n.T("Permission.Storage"))
                 </MListItemContent>
 
-                <MListItemContent>
-                    <MListItemSubtitle Class="text-right">
+                <MListItemContent Class="setting-state">
+                    <MListItemSubtitle>
                         @StoragePermission
                     </MListItemSubtitle>
                 </MListItemContent>
