--- a/SwashbucklerDiary/Pages/Mine/SettingPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/SettingPage.razor
@@ -41,8 +41,8 @@
                 <MListItemContent>
                     @(I18n.T("Setting.General.Storage.Name"))
                 </MListItemContent>
-                <MListItemContent Style="flex:none;">
-                    <MListItemSubtitle Class="text-right">
+                <MListItemContent Class="setting-state">
+                    <MListItemSubtitle>
                         @CacheSize
                     </MListItemSubtitle>
                 </MListItemContent>
@@ -107,22 +107,6 @@
 
             <MDivider Class="mx-3"></MDivider>
 
-            <MListItem OnClick="@(()=>To("location"))">
-                <MListItemIcon>
-                    <MIcon Class="list-item-icon">
-                        mdi-map-marker-outline
-                    </MIcon>
-                </MListItemIcon>
-                <MListItemContent>
-                    @(I18n.T("Setting.Diary.Location.Name"))
-                </MListItemContent>
-                <MListItemAction>
-                    <MIcon>mdi-chevron-right</MIcon>
-                </MListItemAction>
-            </MListItem>
-
-            <MDivider Class="mx-3"></MDivider>
-
             <MListItem>
                 <MListItemIcon>
                     <MIcon Class="list-item-icon">
@@ -141,6 +125,22 @@
                              Color="white"
                              TrackColor="@MSwitchTrackColor(EditCreateTime)">
                     </MSwitch>
+                </MListItemAction>
+            </MListItem>
+
+            <MDivider Class="mx-3"></MDivider>
+
+            <MListItem OnClick="@(()=>To("location"))">
+                <MListItemIcon>
+                    <MIcon Class="list-item-icon">
+                        mdi-map-marker-outline
+                    </MIcon>
+                </MListItemIcon>
+                <MListItemContent>
+                    @(I18n.T("Setting.Diary.Location.Name"))
+                </MListItemContent>
+                <MListItemAction>
+                    <MIcon>mdi-chevron-right</MIcon>
                 </MListItemAction>
             </MListItem>
         </MList>
@@ -208,8 +208,8 @@
                     <MListItemContent>
                         @(I18n.T("Setting.Safe.PrivacyPassword.Name"))
                     </MListItemContent>
-                    <MListItemContent Style="flex:none;">
-                        <MListItemSubtitle Class="text-right">
+                    <MListItemContent Class="setting-state">
+                        <MListItemSubtitle>
                             @GetPrivatePasswordSetState()
                         </MListItemSubtitle>
                     </MListItemContent>
