💄 style: update style

--- a/SwashbucklerDiary/Shared/MainNavigationDrawer.razor
+++ b/SwashbucklerDiary/Shared/MainNavigationDrawer.razor
@@ -6,6 +6,7 @@
                    Floating="true"
                    Value="Show"
                    Stateless="true"
+                   Width="300"
                    MiniVariant="MiniVariant"
                    Style="max-height:unset;transition: width ease 0.2s;">
     <MList Shaped="true"
