🆕 feat(WritePage): allow add audio and video

--- a/SwashbucklerDiary/Components/MyComponents/MyMarkdown.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyMarkdown.razor
@@ -7,6 +7,6 @@
                Class="@Class"
                Style="padding-top:10px"
                Options="_options"
-               OnToolbarButtonClick="AddImage">
+               OnToolbarButtonClick="HandleToolbarButtonClick">
     </MMarkdown>
 </div>
