--- a/SwashbucklerDiary/Shared/MainLayout.razor
+++ b/SwashbucklerDiary/Shared/MainLayout.razor
@@ -8,11 +8,19 @@
                                   Items="NavigationButtons">
             </MainNavigationDrawer>
             <MMain>
-                @Body
+                <CascadingValue Value="@this">
+                    @Body
+                </CascadingValue>
             </MMain>
             <MainBottomNavigation @bind-Value="SelectedItemIndex"
                                   Items="NavigationButtons">
             </MainBottomNavigation>
+            <MOverlay Value="ShowLoading"
+                      ZIndex="99">
+                <MProgressCircular Indeterminate="true"
+                                   Size="48">
+                </MProgressCircular>
+            </MOverlay>
         </ChildContent>
         <ErrorContent>
             <ErrorDialog></ErrorDialog>
